init+ main+ rename file

--- a/components/Utilities/CMakeLists.txt
+++ b/components/Utilities/CMakeLists.txt
@@ -6,7 +6,7 @@ idf_component_register(
 "JsonUtility/JsonUtility.c"
 "Log/Custom_Log.c"
 "Buzzer/Buzzer.c"
-"SharedBus/SharedBus.cpp"
+"SharedBus/SharedBus.c"
  INCLUDE_DIRS 
 
 "JsonUtility/include"
