--- a/components/Utilities/CMakeLists.txt
+++ b/components/Utilities/CMakeLists.txt
@@ -6,12 +6,12 @@ idf_component_register(
 "JsonUtility/JsonUtility.c"
 "Log/Custom_Log.c"
 "Buzzer/Buzzer.c"
-"SharedBus/SharedBus.c"
+"NetworkChecker/NetworkChecker.c"
  INCLUDE_DIRS 
 
 "JsonUtility/include"
 "Log"
 "nvsFlash/include"
 "Buzzer"
-"SharedBus"
-     REQUIRES spiffs nvs_flash esp_timer esp_event nvs_flash driver json) 
+"NetworkChecker"
+     REQUIRES spiffs nvs_flash esp_timer esp_event nvs_flash driver json esp_http_client esp_wifi) 
